--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -7,8 +7,8 @@
     align-items: center;
 }
 
-#homepage-box{
+#menu-box{
     width: 50%;
     height: 50%;
-    background-color: aliceblue;
+    background-color: rgb(114, 175, 117);
 }
