--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -7,8 +7,8 @@
     align-items: center;
 }
 
-#homepage-box{
+#contact-box{
     width: 50%;
     height: 50%;
-    background-color: aliceblue;
+    background-color: rgb(184, 194, 43);
 }
