--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,4 +1,5 @@
-$background-color: grey;
+$background-color: #2a2a2a;
+$font-color: #af9f7f;
 
 header{
     width: 100%;
@@ -6,8 +7,8 @@ header{
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    gap: 1.5rem;
-    color: white;
+    gap: 2rem;
+    color: $font-color;
     background-color: $background-color;
 }
 
