--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,6 +1,6 @@
 @import './colors.scss';
 
-#contact-container{
+#about-container{
     flex: 1.5;
     /* background-color: rgb(163, 163, 233); */
     
@@ -9,8 +9,8 @@
     align-items: center;
 }
 
-#contact-box{
+#about-box{
     width: 50%;
     height: 50%;
-    background-color: rgb(184, 194, 43);
+    background-color: rgb(11, 30, 46);
 }
