--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,6 +1,8 @@
-#container{
+@import './colors.scss';
+
+#menu-container{
     flex: 1.5;
-    background-color: rgb(163, 163, 233);
+    /* background-color: rgb(163, 163, 233); */
     
     display: flex;
     justify-content: center;
