--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -9,8 +9,7 @@ footer{
     gap: 1.5rem;
 
     color: white;
-    background-color: $background-dark;
-    opacity: 95%;
+    background-color: $background-dark-90;
 }
 
 a{
