adjust colors & add grid layout to homepage

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,6 +2,7 @@ $background-dark: #2a2a2a;
 $background-dark-90: rgba(42, 42, 42, 0.9);
 $background-dark-80: rgba(42, 42, 42, 0.8);
 $background-light: #f5f1de;
+$background-light-2: #cccccc;
 $gold-color: #ebd693;
 $gold-dark-color: #a3771f;
 $blue-color: #0fa8a1;
