--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,12 +1,15 @@
 @import './colors.scss';
 
 footer{
+    position: fixed;
+    bottom: 0;
+    min-height: 60px;
+
     width: 100%;
-    flex: 0.15;
+    flex-shrink: 0;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
-    gap: 1.5rem;
+
 
     color: white;
     background-color: $background-dark-90;
