--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,24 +1,32 @@
 @import './colors.scss';
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=PT+Serif:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rozha+One&display=swap');
+
 $tab-text-size: 1rem;
 
 header{
+    
+    position: fixed;
+    /* margin-top: 10px; */
+    padding: 0.5rem 0;
+    min-height: 95px;
+    
+    
     /* font-family: 'Merriweather', serif; */
-    font-family: 'PT Serif', serif;
     width: 100%;
-    flex: 0.15;
     display: flex;
     justify-content: space-between;
     align-items: center;
-   
+    
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: $gold-color;
-    background-color: $background-dark-90;
-}
+   /*  background-color: $background-dark-90; */
+   background: linear-gradient(180deg, rgba(42,42,42,0.9) 90%, rgba(175,175,175,1) 110%);
+   }
 
 a{
     font-size: $tab-text-size;
     background-color: none;
-    margin: 1rem;
+    margin: 0 1.5rem;
     
     cursor: pointer;
 }
@@ -27,22 +35,22 @@ a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 2rem;
+    margin-left: 5rem;
     
     #home-heading{
+        font-family: 'Rozha One', serif;
         color: $gold-dark-color;
         text-transform: uppercase;
-        font-weight: 700;
-        font-size: 2rem;
-        text-shadow: 0.5px 0.5px $blue-color;
-        letter-spacing: 1.5px;
+        font-weight: 400;
+        font-size: 1.8rem;
+        text-shadow: 0.8px 0.8px $blue-color;
+        letter-spacing: 1.8px;
 
     }
     
     #home-sub-heading{
         font-size: 1rem;
         color: white;
-        font-style: oblique;
         margin-top: 0.25rem;
     }
 }
@@ -50,7 +58,7 @@ a{
 a.active > #home-heading{
     border-bottom: 2px solid $blue-color;
     margin-bottom: -2px;
-    transition: border-width 0.1s ease-in-out,
+    transition: border-width 0.1s ease-in,
                 margin-bottom 0.1s ease-in;
 }
 
