--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,10 +1,27 @@
 @import './colors.scss';
 
 #homepage-container{
-    flex: 1.5;
-    /* background-color: rgb(163, 163, 233); */
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(0.5fr, 1fr));
+    place-items: center;
+    gap: 1rem;
+
+    >div{
+        /* aspect-ratio: 1.1; */
+        width: clamp(85vw, 90vw, 95vw);
+        min-height: 600px;
+
+    }
+}
+
+#welcome{
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
+#news{
+    background-color: red
+}
+
+#hours{
+    background-color: blue
 }
