--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -15,7 +15,25 @@
 }
 
 #welcome{
-    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgba(255, 255, 255, 0.1);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+    #welcome-title{
+        font-size: 4rem;
+        color: $gold-color;
+    }
+
+    #welcome-msg{
+        font-size: 2rem;
+        max-width: 80%;
+        text-align: center;
+        color: $blue-color;
+    }
 }
 
 #news{
