add background img & modify colors of homepage

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -5,4 +5,5 @@ $background-light: #f5f1de;
 $background-light-2: #cccccc;
 $gold-color: #ebd693;
 $gold-dark-color: #a3771f;
-$blue-color: #0fa8a1;
+$blue-color: #17cfc6;
+$blue-dark-color: #0d7a75;
