adjust colors & adjust menu

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -13,5 +13,6 @@ footer{
 
 
     color: $gold-color;
-    background-color: $background-dark-90;
+    background-color: $background-dark;
+    border-top: 2px solid $gold-color ;
 }
