--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -61,6 +61,7 @@
     padding: 1rem;
 
     background-color: $background-dark;
+    border-top: 1px solid $gold-color;
     
     #hours-msg{
         padding: 10%;
