--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,4 +1,5 @@
 $background-dark: #2a2a2a;
+$background-darkish: rgb(58, 58, 58);
 $background-dark-90: rgba(42, 42, 42, 0.9);
 $background-dark-80: rgba(42, 42, 42, 0.8);
 $background-light: #f5f1de;
