--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,10 +30,10 @@ body{
 
 }
 
-#content-main{
-    flex-grow: 1;
+#content-main{/* 
+    flex-grow: 1; */
     margin-top: 95px;
-    margin-bottom: 50px;
+    margin-bottom: 50px; 
 
     display: flex;
 }
