--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -6,5 +6,5 @@ $background-light: #f5f1de;
 $background-light-2: #cccccc;
 $gold-color: #ebd693;
 $gold-dark-color: #a3771f;
-$blue-color: #17cfc6;
-$blue-dark-color: #0d7a75;
+$blue-color: #4fa9cc;
+$blue-dark-color: #357088;
