--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,14 +2,23 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Rozha+One&display=swap');
  */
  
-$tab-text-size: 1rem;
-$gradient-background: linear-gradient(180deg, rgba(42,42,42,0.9) 90%, rgba(175,175,175,1) 110%);
+ //COLORS
+ $gradient-background: linear-gradient(180deg, rgba(42,42,42,0.9) 90%, rgba(175,175,175,1) 110%);
 
+//FONT SIZES
+$title-size: 2rem;
+$sub-title-size: 1rem;
+$header-link-size: 1rem;
+$dropdown-link-size: 1.5rem;
+
+//MENU BUTTON SIZES
 $menu-button-gap: 0.4rem;
+$line-width: 3rem;
 $line-height: 0.3rem;
 $menu-button-height: calc(calc($menu-button-gap*2) + calc($line-height*3));
 $line-cross-width: calc($menu-button-height * 1.414);
 
+//ANIMATE TIMES
 $lines-animate-time: 0.5s;
 $dropbox-animate-time: 0.2s;
 
@@ -24,7 +33,7 @@ header{
     justify-content: space-between;
     align-items: center;
     
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
     color: $gold-color;
     background-color: $background-dark;
     /* background: $gradient-background; */
@@ -32,7 +41,7 @@ header{
 }
 
 a{
-    font-size: $tab-text-size;
+    font-size: $header-link-size;
     background-color: none;
     margin: 0 1.5rem;
     
@@ -46,18 +55,18 @@ a{
     margin-left: 5rem;
     
     #home-heading{
-        font-family: 'Rozha One', serif;
+        /* font-family: 'Rozha One', serif; */
         color: $gold-dark-color;
         text-transform: uppercase;
-        font-weight: 400;
-        font-size: 1.8rem;
+        font-weight: 600;
+        font-size: $title-size;
         text-shadow: 0.8px 0.8px $blue-color;
         letter-spacing: 1.8px;
 
     }
     
     #home-sub-heading{
-        font-size: 1rem;
+        font-size: $sub-title-size;
         color: white;
         margin-top: -0.15rem;
     }
@@ -91,6 +100,7 @@ a{
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
+    text-align: center;
     
     position: absolute;
     z-index: 1;
@@ -112,13 +122,14 @@ a{
 
     a{
         color: $gold-color;
-        font-size: 1.5rem;
+        font-size: $dropdown-link-size;
         text-transform: uppercase;
+        min-width: 100vw;
     }
 }
 
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 650px){
     #right-side{
         display: none;    
     }
@@ -137,7 +148,7 @@ a{
         cursor: pointer;
 
         .line{
-            width: 3rem;
+            width: $line-width;
             height: $line-height;
 
             border-radius: 100px;
