--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,31 +1,39 @@
 @import './colors.scss';
 
-$background-color: $background-dark;
-$img-size: clamp(300px, 50vw, 650px);
-$font-size: clamp(0.9rem, 2.5vw, 2rem);
-$font-color: white;
+//COLORS
+$background-color: $background-dark-90;
+$font-color: $gold-color;
+
+//SIZES
+$img-size: clamp(300px, 80vw, 650px);
+$text-container-size: clamp(300px, 40vw, 650px);
+$font-size: clamp(1.2rem, 2vw, 1.5rem);
 
 #about-container{
     flex-grow: 1;
-    min-width: 80%;
+    min-width: 80vw;
+    max-width: 90vw;
     align-self: center;
-    padding: 2rem;
+    padding: 0 0;
     margin-top: 2vh;
-    background-color: $background-color;
     
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
     justify-content: center;
     align-items: center;
-    grid-column-gap: 2rem;
-    grid-row-gap: 4rem;
+    grid-row-gap: 3rem;
 }
 
-@media only screen and (max-width: 800px){
-    #about-container{
-        grid-template-columns: auto;
-    }
+.section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100%;
+    padding: 1rem;
+
+    background-color: $background-color;
 }
+
 
 .img-container{
     aspect-ratio: 4/3;
@@ -35,16 +43,35 @@ $font-color: white;
     background-size: contain;
     //all the same img for now...
     background-image: url('../assets/fish.jpg');
+    
+    /* border: 2px solid $blue-color;
+    border-radius: 10px; */
+    
 }
 
 .text-container{
-    aspect-ratio: 4/3;
-    width: clamp(250px, 30vw, 650px);
-
+    /* aspect-ratio: 4/3; */
+    width: $text-container-size;
+    padding: 2rem 1rem;
+    
     justify-self: center;
-
+    
     font-size: $font-size;
     text-align: center;
-    color: #fff;
+    color: $font-color;
+    
+}
+
+
+@media only screen and (max-width: 800px){
+   
+    #about-container{
+    }
+    
+    .section{
+        flex-direction: column;
+        min-width: 100vw;
+        gap: 2rem;
+   }
 
 }
