fresh build & center dropdown links

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -125,6 +125,7 @@ a{
         font-size: $dropdown-link-size;
         text-transform: uppercase;
         min-width: 100vw;
+        margin-left: 0;
     }
 }
 
