shrink header, footer, reset page on tab clicks

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -15,4 +15,5 @@ footer{
     color: $gold-color;
     background-color: $background-dark;
     border-top: 2px solid $gold-color ;
+    font-size: 0.8rem;
 }
