--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -25,7 +25,7 @@ $dropbox-animate-time: 0.2s;
 header{
     position: fixed;
     padding: 0.5rem 0;
-    min-height: 95px;
+    min-height: 90px;
     z-index: 40;
     
     width: 100%;
@@ -46,6 +46,11 @@ a{
     margin: 0 1.5rem;
     
     cursor: pointer;
+}
+
+a:active{
+    transform: scale(1.01);
+    transition: 0.2s;
 }
 
 #home-tab{
@@ -105,7 +110,7 @@ a{
     position: absolute;
     z-index: 1;
     min-width: 100vw;
-    top: 95px;
+    top: 90px;
     
     padding: 0.5rem 0;
     gap: 0.9rem;
