--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -73,7 +73,7 @@ $font-size: clamp(1rem, 2vw, 1.5rem);
 }
 
 #section-3 .img-container{
-    background-image: url('../assets/FH_pies.jpg');
+    background-image: url('../assets/FH_potatoes.png');
 }
 
 
