--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,10 +1,33 @@
 @import './colors.scss';
 
 #contact-container{
-    flex: 1.5;
-    /* background-color: rgb(163, 163, 233); */
+    flex-grow: 1;
+    align-self: center;
+    padding: 0 0;
+    margin-top: 2.5vh;
+    min-width: 80vw;
     
+    display: grid;
+    grid-template-columns: 1fr;
+
+    text-align: center;
+}
+
+
+.about-section{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 1rem;
+    gap: 0.5rem;
+
+    background-color: red;
+}
+
+.box{
+    flex: 1;
+    background-color: $gold-color;
+}
+
+.contact-heading{
+    font-size: 1.2rem;
+    margin-top: 1rem;
 }
