--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -8,13 +8,14 @@
     min-width: 80vw;
     
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: auto;
+    grid-auto-rows: 1fr;
 
     text-align: center;
 }
 
 
-.about-section{
+.contact-section{
     display: flex;
     padding: 1rem;
     gap: 0.5rem;
@@ -24,7 +25,11 @@
 
 .box{
     flex: 1;
-    background-color: $gold-color;
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .contact-heading{
