--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,5 +1,9 @@
 @import './colors.scss';
 
+//COLORS
+$section-bg-color: $background-dark;
+$address-font-color: white;
+
 #contact-container{
     flex-grow: 1;
     align-self: center;
@@ -9,7 +13,8 @@
     
     display: grid;
     grid-template-columns: auto;
-    grid-auto-rows: 1fr;
+    grid-auto-rows: auto;
+    /* gap: 1rem; */
 
     text-align: center;
 }
@@ -20,7 +25,7 @@
     padding: 1rem;
     gap: 0.5rem;
 
-    background-color: red;
+    background-color: $section-bg-color;
 }
 
 .box{
@@ -29,10 +34,41 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+}
+
+#contact-info-box{
+    color: $address-font-color;
+    background-color: $section-bg-color;
+
+}
+
+#map-box{
+    background-color: $section-bg-color;
+
+}
+
+#map{
+    width: 90%;
+    height: 90%;
+    margin: auto;
+
+    border: 2px solid $blue-color;
+    border-radius: 10px;
 }
 
 .contact-heading{
     font-size: 1.2rem;
     margin-top: 1rem;
+    color:  $blue-color;
+}
+
+@media only screen and (max-width: 800px){
+   
+    .contact-section{
+        flex-direction: column;
+        min-width: 95vw;
+        gap: 1rem;
+   }
+
 }
