--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -3,6 +3,8 @@
 //COLORS
 $section-bg-color: $background-dark;
 $address-font-color: white;
+$msg-font-color: white;
+$msg-bold-color: $blue-color;
 
 #contact-container{
     flex-grow: 1;
@@ -30,7 +32,7 @@ $address-font-color: white;
 
 .box{
     flex: 1;
-    background-color: white;
+    /* background-color: white; */
 
     display: flex;
     flex-direction: column;
@@ -41,6 +43,12 @@ $address-font-color: white;
     color: $address-font-color;
     background-color: $section-bg-color;
 
+}
+
+.contact-heading{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    color:  $blue-color;
 }
 
 #map-box{
@@ -57,10 +65,17 @@ $address-font-color: white;
     border-radius: 10px;
 }
 
-.contact-heading{
-    font-size: 1.2rem;
-    margin-top: 1rem;
-    color:  $blue-color;
+#message-box{
+    .msg{
+        color: $msg-font-color;
+        padding: 0.5rem;
+        margin-bottom: 1.5rem;
+    }
+
+    .msg-bold{
+        font-weight: 700;
+        color: $msg-bold-color;
+    }
 }
 
 @media only screen and (max-width: 800px){
